# IMBD-Review-Sentiment-Pipeline

./: .dockerignore  .dvcignore  .env_for_repo  .gitignore  Dockerfile.Dask  common-requirements.txt  docker-compose.yaml  dvc.yaml  package-lock.json  params.yaml  pyproject.toml  requirements-dev.txt  requirements-prediction.txt  requirements-training.txt  requirements.txt  setup.py
.dvc/: config
.github/workflows/: CI-CD.yaml  CI-Pipeline.yaml
assets/: CD-Architecture.mmd  Dask-Architecture-MermaidChart.mmd  Log-Architecture.mmd  batch_inference.csv
common/constants/: __init__.py
common/exception/: __init__.py
common/logger/: __init__.py  global_logging.py
common/scripts/: clear_mlflow_registry.py  inspect_model_weights.py  promote_model.py
common/utils/: __init__.py  main_utils.py  mlflow_utils.py
docs/: conf.py  index.rst
docs/modules/: src.rst  (+11 more)
fast_api_app/: app.py
frontend/: Dockerfile
imdb-frontend/: Dockerfile  package-lock.json  package.json  postcss.config.js
notebooks/: exp1.ipynb  exp2-BOW-Vs-TFIDF.py  exp3-LOGREG-BOW.py  exp4-BOW-Vs-Hashing-Vectorizer.py  exp5-TFIDF-Vs-HASHING_VECTORIZER.py  exp6-Tuning-Tfi-df.py  exp7_Tuning-LR-Model.py  tempCodeRunnerFile.py
services/: Improvements.txt
test/: test_data_ingestion.py  test_data_preprocess.py  test_dvc_training_management_script.py  test_fast_api_app.py  test_feature_engineering.py  test_json_utils.py  test_mlflow_utils.py  test_model_registry.py  test_model_training.py  test_prediction_api_app.py  test_preprocess.py  test_training_api_app.py  test_unified_prediction_pipeline.py
(+74 files in other folders)
